; ModuleID = '/home/carl/AnghaBench/vlc/lib/extr_media.c_libvlc_media_get_duration.c'
source_filename = "/home/carl/AnghaBench/vlc/lib/extr_media.c_libvlc_media_get_duration.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@.str = private unnamed_addr constant [14 x i8] c"No input item\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @libvlc_media_get_duration(%struct.TYPE_4__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_4__*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %5 = call i32 @assert(%struct.TYPE_4__* %4)
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %12, label %10

10:                                               ; preds = %1
  %11 = call i32 @libvlc_printerr(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %2, align 4
  br label %25

12:                                               ; preds = %1
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @input_item_IsPreparsed(i32 %15)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %12
  store i32 -1, i32* %2, align 4
  br label %25

19:                                               ; preds = %12
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @input_item_GetDuration(i32 %22)
  %24 = call i32 @from_mtime(i32 %23)
  store i32 %24, i32* %2, align 4
  br label %25

25:                                               ; preds = %19, %18, %10
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local i32 @assert(%struct.TYPE_4__*) #1

declare dso_local i32 @libvlc_printerr(i8*) #1

declare dso_local i32 @input_item_IsPreparsed(i32) #1

declare dso_local i32 @from_mtime(i32) #1

declare dso_local i32 @input_item_GetDuration(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
